@@ -6,6 +6,7 @@ What's New for OpenJPEG
 + : added
 
 January 25, 2012
+* [vincent] fix libopenjpip link on Windows
 * [vincent] follow latest JPIP changes in the autotools side (pthread dependency, conditional compilation of JPIP server and client)
 
 December 8, 2011
